Data rendering correctly from all categories -recovered, cassualties, cases- but the difference among them is too big for visualization. So we need three charts instead per year

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,7 @@ body {
 }
 
 p {
-  color: #8783a2;
+  color: #dcb6f1;
 }
 
 #home-charts {
